# deadpool

./: .gitignore  ci.jsonnet  deadpool.code-workspace  gen-ci.sh  release.toml
.devcontainer/: .env  Dockerfile  compose.yml  devcontainer.json
.github/workflows/: deadpool-diesel.yml  deadpool-lapin.yml  deadpool-libsql.yml  deadpool-memcached.yml  deadpool-postgres.yml  deadpool-r2d2.yml  deadpool-redis.yml  deadpool-runtime.yml  deadpool-sqlite.yml  deadpool-sync.yml  deadpool.yml
crates/deadpool/: CHANGELOG.md  Cargo.toml  README.md  ci.config.yml
crates/deadpool-diesel/: CHANGELOG.md  Cargo.toml  README.md  ci.config.yml
crates/deadpool-diesel/src/: manager.rs
crates/deadpool-lapin/: CHANGELOG.md  Cargo.toml  README.md  ci.config.yml
crates/deadpool-lapin/src/: config.rs
crates/deadpool-libsql/: CHANGELOG.md  Cargo.toml  README.md  ci.config.yml
crates/deadpool-libsql/src/: config.rs  errors.rs  lib.rs
crates/deadpool-libsql/tests/: libsql.rs
crates/deadpool-memcached/: CHANGELOG.md  Cargo.toml  README.md  ci.config.yml
crates/deadpool-memcached/tests/: basic.rs
crates/deadpool-postgres/: CHANGELOG.md  Cargo.toml  README.md  ci.config.yml
crates/deadpool-postgres/src/: config.rs  lib.rs
crates/deadpool-postgres/tests/: async_trait.rs
crates/deadpool-r2d2/: CHANGELOG.md  Cargo.toml  README.md  ci.config.yml
crates/deadpool-redis/: CHANGELOG.md  Cargo.toml  README.md  ci.config.yml
crates/deadpool-redis/src/sentinel/: config.rs
crates/deadpool-redis/tests/: redis.rs  redis_cluster.rs  redis_sentinel.rs
crates/deadpool-runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/deadpool-sqlite/: CHANGELOG.md  Cargo.toml  README.md  ci.config.yml
crates/deadpool-sqlite/src/: config.rs
crates/deadpool-sync/: CHANGELOG.md  Cargo.toml  README.md
crates/deadpool-sync/src/: lib.rs
crates/deadpool/src/managed/: errors.rs  hooks.rs
crates/deadpool/tests/: managed_resize.rs
examples/diesel/: Cargo.toml
examples/postgres-actix-web/: Cargo.toml
examples/postgres-axum/: Cargo.toml
examples/postgres-benchmark/: Cargo.toml
examples/redis-actix-web/: Cargo.toml
tools/: cargo-update-minimal-versions.sh  check-reexported-features.sh
