[package]
name = "deadpool-lapin"
version = "0.13.1"
edition = "2021"
rust-version = "1.85"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for lapin"
keywords = ["async", "lapin", "pool", "amqp", "rabbitmq"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/deadpool-rs/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = [
    "deadpool/rt_tokio_1",
    "tokio-executor-trait",
    "tokio-reactor-trait",
]
rt_async-std_1 = [
    "deadpool/rt_async-std_1",
    "async-executor-trait",
    "async-reactor-trait",
]
serde = ["deadpool/serde", "dep:serde"]

# Re-export of lapin features
codegen = ["lapin/codegen"]
codegen-internal = ["lapin/codegen-internal"]
default-runtime = ["lapin/default-runtime"]
hickory-dns = ["lapin/hickory-dns"]
native-tls = ["lapin/native-tls"]
openssl = ["lapin/openssl"]
rustls = ["lapin/rustls"]
rustls--aws_lc_rs = ["lapin/rustls--aws_lc_rs"]
rustls--ring = ["lapin/rustls--ring"]
rustls-native-certs = ["lapin/rustls-native-certs"]
rustls-webpki-roots-certs = ["lapin/rustls-webpki-roots-certs"]
unstable = ["lapin/unstable"]
vendored-openssl = ["lapin/vendored-openssl"]

[dependencies]
async-executor-trait = { version = "2.1", optional = true }
async-reactor-trait = { version = "2", optional = true }
deadpool = { path = "../deadpool", version = "0.12.0", default-features = false, features = [
    "managed",
] }
lapin = { version = "3.2", default-features = false }
serde = { package = "serde", version = "1.0.103", features = [
    "derive",
], optional = true }
tokio-executor-trait = { version = "2.1.0", optional = true }
tokio-reactor-trait = { version = "3", optional = true }

[dev-dependencies]
config = { version = "0.15", features = ["json"] }
dotenvy = "0.15"
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }

[package.metadata.cargo-machete]
ignored = ["async-global-executor"]
