[package]
name = "example-postgres-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json"] }
thiserror = "2.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
deadpool-postgres = { path = "../../crates/deadpool-postgres", features = ["serde"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }
dotenvy = "0.15.7"
uuid = { version = "1.8.0", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
config = "0.15.0"
axum-macros = "0.5"
